--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
